# Crank

./: CMakeLists.txt  CrankEngine.slnx  README.md
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Renderer/: GLfunctions.hpp  Renderer.vcxproj  Renderer.vcxproj.filters  Test.cpp  main.cpp  tools.hpp  tutorial.frag  tutorial.vert  yellow.frag
app/: main.cpp
include/crank/: core.hpp  math.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/crank/: core.cpp
src/glad/: glad.c
src/misc/: test.cpp
